--- a/css/custom.css
+++ b/css/custom.css
@@ -74,7 +74,7 @@ h4.bgred-headl {
 }
 .newtabs {
   position: absolute;
-  bottom: 17px;
+  bottom: 12px;
   width: 100%;
   left: 14.3%;
 }
@@ -83,9 +83,10 @@ h4.bgred-headl {
 }
 .newtabs .nav-tabs .nav-link {
   background-color: white;
-  margin-right: 9px;
+  margin-right: 6px;
   color: black;
   border: 0px;
+  padding: 3px 19px;
   text-transform: uppercase;
 }
 .newtabs .nav-tabs .nav-link.active {
